--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Sample</title>
-	<link href="main.css" rel="styleshit">
+	<link rel="stylesheet" type="text/css" href="GitHub\project1\style.css">
 </head>
 <body>
 	<p>Hello</p>
